<?xml version="1.0" encoding="UTF-8"?>
<!-- 
/*******************************************************************************
* Copyright 2013 Jeff MAURY
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
******************************************************************************/
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>
  <groupId>org.golo-lang.gldt</groupId>
  <artifactId>gldt</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Golo Language Development Toolkit</name>
  <description>Eclipse based Golo languade developement toolkit</description>
  <url>http://github.com/jeffmaury/gldt</url>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git@github.com:jeffmaury/gldt.git</connection>
    <developerConnection>scm:git:git@github.com:jeffmaury/gldt.git</developerConnection>
    <url>scm:git:git@github.com:jeffmaury/gldt.git</url>
  </scm>
  <developers>
    <developer>
      <id>jeffmaury</id>
      <name>Jeff MAURY</name>
      <email>jeffmaury@jeffmaury.com</email>
    </developer>
  </developers>
  <properties>
    <tycho-version>0.17.0</tycho-version>
  </properties>
  <modules>
    <module>org.golo-lang.gldt.core</module>
    <module>org.golo-lang.gldt.core.ui</module>
    <module>org.golo-lang.gldt.core.feature</module>
    <module>org.golo-lang.gldt.site</module>
    <module>org.golo-lang.gldt.core.tests</module>
    <module>org.golo-lang.gldt.target</module>
  </modules>
  <pluginRepositories>
    <pluginRepository>
      <id>fornax</id>
      <url>http://fornax-platform.org/nexus/content/repositories/releases</url>
    </pluginRepository>
  </pluginRepositories>
  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <resolver>p2</resolver>
          <pomDependencies>consider</pomDependencies>
          <ignoreTychoRepositories>true</ignoreTychoRepositories>
          <target>
            <artifact>
              <groupId>${project.groupId}</groupId>
              <artifactId>${project.groupId}.target</artifactId>
              <version>${project.version}</version>
              <classifier>${target-platform}</classifier>
            </artifact>
          </target>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>maven-osgi-lifecycle-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-packaging-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
                        <!-- workaround for TYCHO-349 or TYCHO-313 -->
            <strictVersions>false</strictVersions>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <useUIHarness>true</useUIHarness>
            <useUIThread>false</useUIThread>
            <includes>
              <include>**/*Test.java</include>
            </includes>
            <argLine>${tycho.test.jvmArgs}</argLine>
            <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <source>1.5</source>
            <target>1.5</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-director-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-repository-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <includeAllDependencies>true</includeAllDependencies>
          </configuration>
        </plugin>
                <!-- important for self-hosting -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>wagon-maven-plugin</artifactId>
          <version>1.0-beta-4</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.fornax.toolsupport</groupId>
          <artifactId>fornax-oaw-m2-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <profiles>
    <profile>
      <id>sun-jvm</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>http://java.sun.com/</value>
        </property>
      </activation>
      <properties>
        <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
      </properties>
    </profile>
    <profile>
      <id>osx</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>http://www.apple.com/</value>
        </property>
      </activation>
      <properties>
        <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.jvmArgs>
        <osgi.ws>cocoa</osgi.ws>
      </properties>
    </profile>
    <profile>
      <id>sign</id>
      <activation>
        <property>
          <name>jarsigner.alias</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jarsigner-plugin</artifactId>
            <version>1.2</version>
            <executions>
              <execution>
                <id>sign</id>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>e37</id>
      <activation>
        <property>
          <name>!target-profile</name>
        </property>
      </activation>
      <properties>
        <target-platform>e37</target-platform>
      </properties>
    </profile>
    <profile>
      <id>e36</id>
      <activation>
        <property>
          <name>target-profile</name>
          <value>e36</value>
         </property>
      </activation>
      <properties>
        <target-platform>e36</target-platform>
      </properties>
    </profile>
    <profile>
      <id>e35</id>
      <activation>
        <property>
          <name>target-profile</name>
          <value>e35</value>
         </property>
      </activation>
      <properties>
        <target-platform>e35</target-platform>
      </properties>
    </profile>
    <profile>
      <id>e38</id>
      <activation>
        <property>
          <name>target-profile</name>
          <value>e38</value>
         </property>
      </activation>
      <properties>
        <target-platform>e38</target-platform>
      </properties>
    </profile>
    <profile>
      <id>e42</id>
      <activation>
        <property>
          <name>target-profile</name>
          <value>e42</value>
         </property>
      </activation>
      <properties>
        <target-platform>e42</target-platform>
      </properties>
    </profile>
    <profile>
      <id>e43</id>
      <activation>
        <property>
          <name>target-profile</name>
          <value>e43</value>
         </property>
      </activation>
      <properties>
        <target-platform>e43</target-platform>
      </properties>
    </profile>
    <profile>
      <id>product</id>
      <modules>
        <module>org.gololang.gldt.product</module>
      </modules>
    </profile>
  </profiles>
</project>

